# docs/swagger.json
@@ -169,6 +169,77 @@
                 }
             }
         },
+        "/customer": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "GetAllCustomer",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Customer"
+                ],
+                "summary": "GetAllCustomer",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/domain.Customer"
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "CreateNewCustomer",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Customer"
+                ],
+                "summary": "CreateNewCustomer",
+                "parameters": [
+                    {
+                        "description": "NewCustomer",
+                        "name": "brand",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.CustomerRequestSchema"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/domain.CustomerResponseSchema"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/player": {
             "get": {
                 "security": [
@@ -455,12 +526,17 @@
         },
         "domain.Brand": {
             "type": "object",
+            "required": [
+                "brand_name"
+            ],
             "properties": {
                 "brand_id": {
                     "type": "string"
                 },
                 "brand_name": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 12,
+                    "minLength": 3
                 },
                 "created_at": {
                     "type": "string"
@@ -472,9 +548,14 @@
         },
         "domain.BrandRequestSchema": {
             "type": "object",
+            "required": [
+                "brand_name"
+            ],
             "properties": {
                 "brand_name": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 12,
+                    "minLength": 3
                 }
             }
         },
@@ -495,11 +576,132 @@
                 }
             }
         },
-        "domain.Login": {
+        "domain.Customer": {
             "type": "object",
             "properties": {
-                "password": {
+                "activityAt": {
                     "type": "string"
+                },
+                "authToken": {
+                    "type": "string"
+                },
+                "brand": {
+                    "$ref": "#/definitions/domain.Brand"
+                },
+                "brandId": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "customerID": {
+                    "type": "string"
+                },
+                "customerName": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "fistName": {
+                    "type": "string"
+                },
+                "lastName": {
+                    "type": "string"
+                },
+                "phoneNumber": {
+                    "type": "string"
+                },
+                "platFrom": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.CustomerRequestSchema": {
+            "type": "object",
+            "required": [
+                "customer_name",
+                "email",
+                "fist_name",
+                "last_name",
+                "phone_number"
+            ],
+            "properties": {
+                "customer_name": {
+                    "type": "string",
+                    "minLength": 3
+                },
+                "email": {
+                    "type": "string",
+                    "minLength": 3
+                },
+                "fist_name": {
+                    "type": "string",
+                    "minLength": 3
+                },
+                "last_name": {
+                    "type": "string",
+                    "minLength": 3
+                },
+                "phone_number": {
+                    "type": "string",
+                    "maxLength": 10,
+                    "minLength": 10
+                }
+            }
+        },
+        "domain.CustomerResponseSchema": {
+            "type": "object",
+            "required": [
+                "customer_name",
+                "email",
+                "fist_name",
+                "last_name",
+                "phone_number"
+            ],
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "customer_name": {
+                    "type": "string",
+                    "minLength": 3
+                },
+                "email": {
+                    "type": "string",
+                    "minLength": 3
+                },
+                "fist_name": {
+                    "type": "string",
+                    "minLength": 3
+                },
+                "last_name": {
+                    "type": "string",
+                    "minLength": 3
+                },
+                "phone_number": {
+                    "type": "string",
+                    "maxLength": 10,
+                    "minLength": 10
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.Login": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string",
+                    "minLength": 8
                 },
                 "username": {
                     "type": "string"
@@ -554,6 +756,9 @@
         },
         "domain.Player": {
             "type": "object",
+            "required": [
+                "player_name"
+            ],
             "properties": {
                 "created_at": {
                     "type": "string"
@@ -562,7 +767,8 @@
                     "type": "string"
                 },
                 "player_name": {
-                    "type": "string"
+                    "type": "string",
+                    "minLength": 3
                 },
                 "updated_at": {
                     "type": "string"
@@ -620,6 +826,13 @@
         },
         "go_game_crm_core_domain.User": {
             "type": "object",
+            "required": [
+                "email",
+                "first_name",
+                "last_name",
+                "phone_number",
+                "user_name"
+            ],
             "properties": {
                 "bradId": {
                     "type": "string"
@@ -631,16 +844,21 @@
                     "type": "string"
                 },
                 "email": {
-                    "type": "string"
+                    "type": "string",
+                    "minLength": 3
                 },
                 "first_name": {
-                    "type": "string"
+                    "type": "string",
+                    "minLength": 3
                 },
                 "last_name": {
-                    "type": "string"
+                    "type": "string",
+                    "minLength": 3
                 },
                 "phone_number": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 10,
+                    "minLength": 10
                 },
                 "role": {
                     "$ref": "#/definitions/domain.Role"
@@ -655,7 +873,8 @@
                     "type": "string"
                 },
                 "user_name": {
-                    "type": "string"
+                    "type": "string",
+                    "minLength": 3
                 }
             }
         }
